--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_collapseMode="pin"
+    android:background="#2196F3"
     tools:context=".MainActivity">
 
-    <LinearLayout
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:background="#03A9F4"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_collapseMode="pin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageButton
+
+                    android:id="@+id/backbtn"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />
+
+                <EditText
+                    android:id="@+id/etUrl"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="12"
+                    android:background="@drawable/edit_bg"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:hint="search something"
+                    android:inputType="textWebEditText"
+                    android:lines="1"
+                    android:paddingHorizontal="8dp"
+                    android:paddingVertical="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/btnGo"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_baseline_search_24" />
+
+        </LinearLayout>
+
+
+
+    <WebView
+        android:id="@+id/myWebView"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="#03A9F4"
-        android:orientation="horizontal"
-        android:gravity="center"
-        >
-
-        <ImageButton
-
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_baseline_arrow_back_ios_24" />
-
-        <EditText
-            android:id="@+id/etUrl"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="12"
-            android:background="@drawable/edit_bg"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="search something"
-            android:inputType="textWebEditText"
-            android:lines="1"
-            android:paddingHorizontal="8dp"
-            android:paddingVertical="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/btnGo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="10dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_baseline_search_24" />
-
-    </LinearLayout>
-
-
-
+        android:layout_height="674dp"
+        android:layout_marginTop="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
