--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,21 +9,11 @@
     tools:context=".MainActivity">
 
 
-    <ImageButton
-
-        android:id="@+id/backbtn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="9dp"
-        android:background="@android:color/transparent"
-        android:src="@drawable/ic_baseline_arrow_back_ios_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <EditText
         android:id="@+id/etUrl"
         android:layout_width="0dp"
         android:layout_height="40dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_weight="12"
         android:background="@drawable/edit_bg"
@@ -35,7 +25,7 @@
         android:paddingHorizontal="8dp"
         android:paddingVertical="8dp"
         app:layout_constraintEnd_toStartOf="@+id/btnGo"
-        app:layout_constraintStart_toEndOf="@+id/backbtn"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
@@ -43,6 +33,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="9dp"
+        android:elevation="10dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_baseline_search_24"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +64,49 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myWebView" />
+        app:layout_constraintTop_toBottomOf="@+id/myWebView" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+        <ImageButton
+
+            android:id="@+id/backbtn"
+            android:layout_width="125dp"
+            android:layout_height="50dp"
+            android:elevation="10dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_baseline_arrow_back_ios_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+
+                android:id="@+id/homeBtn"
+                android:layout_width="125dp"
+                android:layout_height="50dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/home"
+                android:elevation="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+
+                android:id="@+id/settingBtn"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:elevation="10dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_baseline_settings_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
