--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,11 +8,23 @@
     tools:context=".MainActivity">
 
 
+    <ImageButton
+
+        android:id="@+id/settingBtn"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="9dp"
+        android:background="@android:color/transparent"
+        android:elevation="10dp"
+        android:src="@drawable/ic_baseline_settings_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <EditText
         android:id="@+id/etUrl"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_weight="12"
         android:background="@drawable/edit_bg"
@@ -25,7 +36,7 @@
         android:paddingHorizontal="8dp"
         android:paddingVertical="8dp"
         app:layout_constraintEnd_toStartOf="@+id/btnGo"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/settingBtn"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
@@ -33,8 +44,8 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="9dp"
-        android:elevation="10dp"
         android:background="@android:color/transparent"
+        android:elevation="10dp"
         android:src="@drawable/ic_baseline_search_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -52,6 +63,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etUrl" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="4dp"
@@ -64,7 +76,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myWebView" >
+        app:layout_constraintTop_toBottomOf="@+id/myWebView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -72,36 +84,37 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-        <ImageButton
-
-            android:id="@+id/backbtn"
-            android:layout_width="125dp"
-            android:layout_height="50dp"
-            android:elevation="10dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_baseline_arrow_back_ios_24"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
             <ImageButton
 
-                android:id="@+id/homeBtn"
-                android:layout_width="125dp"
+                android:id="@+id/backbtn"
+                android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:background="@android:color/transparent"
-                android:src="@drawable/home"
                 android:elevation="10dp"
+                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
 
-                android:id="@+id/settingBtn"
-                android:layout_width="120dp"
+                android:id="@+id/homeBtn"
+                android:layout_width="100dp"
                 android:layout_height="50dp"
-                android:elevation="10dp"
                 android:background="@android:color/transparent"
-                android:src="@drawable/ic_baseline_settings_24"
+                android:elevation="10dp"
+                android:src="@drawable/home"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <ImageButton
+
+                android:id="@+id/forwardBtn"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:background="@android:color/transparent"
+                android:elevation="10dp"
+                android:src="@drawable/forward"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
